# sp_ask_presence_alert

./: .env-example  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  crontab-example  dev-requirements.txt  entrypoint.sh  log_setup.py  presence.db  pyproject.toml  requirements.txt  sp_ask_service_availability_alert.py
sp_ask_presence_alert/: __init__.py
tests/: test_sp_ask_presence_alert.py
