[tool.poetry]
name = "sp_ask_service_availability_alert"
version = "0.1.0"
description = ""
authors = ["Guinsly Mondesir <guinslym@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ask_schools = "^0.3.6"
lh3api = "^0.2.0"
sp_ask_chats_utils = "^0.1.2"
peewee = "^3.13.3"
requests = "^2.23.0"
twisted = "^20.3.0"
environs = "^7.4.0"
twilio = "^6.39.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = "^0.10.2"
ptpython = "^3.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
